--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 16:53]
+#+CAPTION: Clock summary at [2017-12-09 Sat 16:58]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:28* |       |       | 100.0 |
+| *Total time*                                                                | *59:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:28   |       |       | 100.0 |
-| Active                                                                      |         | 59:28 |       | 100.0 |
+| Stories                                                                     | 59:32   |       |       | 100.0 |
+| Active                                                                      |         | 59:32 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.8 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.0 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.6 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.1 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  23.0 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.9 |
 | COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  27.0 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.4 |
@@ -38,7 +38,7 @@
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.8 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:14 |   0.4 |
+| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:18 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -576,6 +576,7 @@ property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
 *** STARTED Rename =yarn.dia= to =external.dia=                       :story:
+    CLOCK: [2017-12-09 Sat 16:54]--[2017-12-09 Sat 16:58] =>  0:04
     CLOCK: [2017-12-09 Sat 16:48]--[2017-12-09 Sat 16:53] =>  0:05
     CLOCK: [2017-12-09 Sat 16:38]--[2017-12-09 Sat 16:47] =>  0:09
 
