--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 17:28]
+#+CAPTION: Clock summary at [2017-12-09 Sat 21:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:59* |       |       | 100.0 |
+| *Total time*                                                                | *60:02* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:59   |       |       | 100.0 |
-| Active                                                                      |         | 59:59 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.8 |
+| Stories                                                                     | 60:02   |       |       | 100.0 |
+| Active                                                                      |         | 60:02 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.0 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.5 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.9 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.8 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.9 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  26.8 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  26.7 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.3 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
@@ -36,9 +36,10 @@
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.3 |
 | COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.5 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.9 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.8 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.7 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:45 |   1.3 |
+| STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:45 |   1.2 |
+| STARTED Rename =yarn.json= to =external.json=                               |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -585,6 +586,11 @@ flight as we transform from exomodel to endomodel.
 
 As per analysis story, we are moving away from the sewing terms.
 
+*** STARTED Rename =yarn.json= to =external.json=                     :story:
+    CLOCK: [2017-12-09 Sat 21:01]--[2017-12-09 Sat 21:04] =>  0:03
+
+As per analysis story, we are moving away from the sewing terms.
+
 *** Add support for "ad-hoc" probing                                  :story:
 
 We have a set of inputs supplied to the prober called "initial
@@ -614,10 +620,6 @@ As per analysis story, we are moving away from the sewing terms.
 As per analysis story, we are moving away from the sewing terms.
 
 *** Rename =quilt.csharp= to =generation.csharp=                      :story:
-
-As per analysis story, we are moving away from the sewing terms.
-
-*** Rename =yarn.json= to =external.json=                             :story:
 
 As per analysis story, we are moving away from the sewing terms.
 
