--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,33 +13,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 21:45]
+#+CAPTION: Clock summary at [2017-12-09 Sat 22:16]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:41* |       |       | 100.0 |
+| *Total time*                                                                | *61:11* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:41   |       |       | 100.0 |
-| Active                                                                      |         | 60:41 |       | 100.0 |
+| Stories                                                                     | 61:11   |       |       | 100.0 |
+| Active                                                                      |         | 61:11 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   3.9 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.3 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.6 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.9 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  26.4 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.2 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.4 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.8 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  26.2 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.3 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.6 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.0 |
-| COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.3 |
+| COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.2 |
 | COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.4 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.9 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.8 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.7 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
 | STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  0:45 |   1.2 |
-| STARTED Rename =yarn.json= to =external.json=                               |         |       |  0:42 |   1.2 |
+| STARTED Rename =yarn.json= to =external.json=                               |         |       |  1:12 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -587,6 +587,7 @@ flight as we transform from exomodel to endomodel.
 As per analysis story, we are moving away from the sewing terms.
 
 *** STARTED Rename =yarn.json= to =external.json=                     :story:
+    CLOCK: [2017-12-09 Sat 21:46]--[2017-12-09 Sat 22:16] =>  0:30
     CLOCK: [2017-12-09 Sat 21:24]--[2017-12-09 Sat 21:45] =>  0:21
     CLOCK: [2017-12-09 Sat 21:05]--[2017-12-09 Sat 21:23] =>  0:18
     CLOCK: [2017-12-09 Sat 21:01]--[2017-12-09 Sat 21:04] =>  0:03
