--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 22:38]
+#+CAPTION: Clock summary at [2017-12-09 Sat 23:02]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *61:32* |       |       | 100.0 |
+| *Total time*                                                                | *61:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 61:32   |       |       | 100.0 |
-| Active                                                                      |         | 61:32 |       | 100.0 |
+| Stories                                                                     | 61:55   |       |       | 100.0 |
+| Active                                                                      |         | 61:55 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.7 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   3.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   3.8 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.9 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.1 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  14.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  22.2 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.8 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  26.1 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  25.9 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
-| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.3 |
+| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.2 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.6 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.0 |
@@ -39,7 +39,8 @@
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.7 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
 | STARTED Rename =yarn.dia= to =external.dia=                                 |         |       |  1:06 |   1.8 |
-| STARTED Rename =yarn.json= to =external.json=                               |         |       |  1:12 |   2.0 |
+| STARTED Rename =yarn.json= to =external.json=                               |         |       |  1:12 |   1.9 |
+| STARTED Remove exomodel and all deprecated classes                          |         |       |  0:23 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -594,6 +595,13 @@ As per analysis story, we are moving away from the sewing terms.
     CLOCK: [2017-12-09 Sat 21:01]--[2017-12-09 Sat 21:04] =>  0:03
 
 As per analysis story, we are moving away from the sewing terms.
+
+*** STARTED Remove exomodel and all deprecated classes                :story:
+    CLOCK: [2017-12-09 Sat 22:39]--[2017-12-09 Sat 23:02] =>  0:23
+
+Once the =external= model has been created, we need to replace the
+legacy exomodel related transforms; and once that is done, we need to
+remove all of the legacy code.
 
 *** Add support for "ad-hoc" probing                                  :story:
 
