--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -547,6 +547,13 @@ Tasks:
 - code-generate; expectation is that no files will change (after
   folder rename).
 
+*** COMPLETED Fix travis build                                        :story:
+    CLOSED: [2017-12-13 Wed 08:29]
+    CLOCK: [2017-12-13 Wed 08:26]--[2017-12-13 Wed 08:29] =>  0:03
+
+- C# cannot locate solution
+- hello world cannot locate diagram
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -635,6 +642,12 @@ Once the =external= model has been created, we need to replace the
 legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
 
+*** Add model modules to name resolution
+
+Even since we did the external modules / model modules change we broke
+code generation; this is because we do not go up the model modules
+during name resolution. Add this to resolver.
+
 *** Rename =yarn= to =modeling=                                       :story:
 
 As per analysis story, we are moving away from the sewing terms.
@@ -674,6 +687,16 @@ Notes:
 : #DOGEN external.dia.comment=true
 
   in fact, should we mention "tagged values" instead of "comment"?
+
+*** Windows packages have a sanity folder                             :story:
+
+We should remove the ctest file and add the dia and json examples. We
+should also have pdf/html docs.
+
+*** Default model modules from filename                               :story:
+
+It would be nice to be able to not have to supply model modules when
+its obvious from the filename.
 
 *** Create the =orchestration= model                                  :story:
 
